loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:17: error: '=>' expected but integer literal found.
    case =< 2 : right();
            ^Poucet1:18: error: '=>' expected but integer literal found.
    case >= 3 : left();
            ^